ajustes da LP, mobile e responsivo ajustado

--- a/resources/assets/styles/components/_banner-home.sass
+++ b/resources/assets/styles/components/_banner-home.sass
@@ -29,3 +29,16 @@
             background-color: #ddc0a6
             color: #fff
             border-radius: 100px
+
+@media only screen and (max-width: 768px)
+  .content-banner-home
+    flex-direction: column !important
+    gap: 0 !important
+    text-align: center !important
+  .text-banner-home
+    width: 100% !important
+  .img-banner-home
+    img
+      height: 45rem !important
+  .s-banner-home
+    margin-bottom: 3rem !important
