--- a/resources/assets/styles/components/_contato.sass
+++ b/resources/assets/styles/components/_contato.sass
@@ -53,3 +53,18 @@
   height: 8rem
   width: 100%
   border-radius: 15px
+
+@media only screen and (max-width: 768px)
+  .box-contato
+    flex-direction: column !important
+    width: 100% !important
+  .box-left-contato
+    width: 100% !important
+  .box-right-contato
+    width: 100% !important
+    text-align: center !important
+    iframe
+      max-width: 100% !important
+  .form-row
+    flex-direction: column !important
+    gap: 0 !important
