--- a/resources/assets/styles/components/_footer.sass
+++ b/resources/assets/styles/components/_footer.sass
@@ -37,3 +37,12 @@
               margin-right: 0.8rem
             a
               padding: 2rem 0
+
+@media only screen and (max-width: 768px)
+  .content-footer
+    flex-direction: column !important
+    width: 100% !important
+    gap: 3rem !important
+    white-space: normal !important
+  .box-left-footer
+    margin: 0 2rem !important
