--- a/resources/assets/styles/components/_sobre.sass
+++ b/resources/assets/styles/components/_sobre.sass
@@ -63,3 +63,12 @@
             margin-top: 3rem
             border-radius: 30px 0 30px 0
       
+@media only screen and (max-width: 768px)
+  .box-sobre
+    flex-direction: column !important
+  .box-left-sobre
+    width: 100% !important
+  .box-right-sobre
+    width: 100% !important
+    display: flex !important
+    justify-content: center !important
