--- a/resources/assets/styles/main.sass
+++ b/resources/assets/styles/main.sass
@@ -10,3 +10,4 @@
 @import './components/_contato'
 @import './components/_insta-feed'
 @import './components/_footer'
+@import './components/_whatsapp'
