--- a/resources/assets/styles/components/_galeria.sass
+++ b/resources/assets/styles/components/_galeria.sass
@@ -11,11 +11,13 @@
         justify-content: center
         align-items: center
         margin-top: 4rem
-        a
+        button
           padding: 1rem 2rem
           border: 2px solid #ddc0a6
           border-radius: 100px
           color: #ddc0a6
+          background: #fff
+          font-size: 1.8rem
       strong
         color: #ddc0a6
       .box-galeria
@@ -39,3 +41,24 @@
   justify-content: center
   align-items: center
   margin: 3rem 0
+
+.link-galeria-insta
+  gap: 2rem
+  display: flex
+  margin: 0 auto
+  justify-content: center
+  align-items: center
+  text-align: center
+  i
+    font-size: 3rem
+  a
+    padding: 1rem 2rem
+    border: 2px solid #ddc0a6
+    border-radius: 100px
+    color: #ddc0a6
+    background: #fff
+    font-size: 1.8rem
+
+@media only screen and (max-width: 768px)
+  .box-galeria
+    column-count: 3 !important
