--- a/resources/assets/styles/components/_reset.sass
+++ b/resources/assets/styles/components/_reset.sass
@@ -64,3 +64,10 @@ h2
 .container
   width: 70%
   margin: 0 auto
+
+.hidden
+  display: none
+
+@media only screen and (max-width: 768px)
+  .container
+    width: 90% !important
