ajustes do button cursor pointer

--- a/resources/assets/styles/components/_galeria.sass
+++ b/resources/assets/styles/components/_galeria.sass
@@ -18,6 +18,8 @@
           color: #ddc0a6
           background: #fff
           font-size: 1.8rem
+          &:hover
+            cursor: pointer
       strong
         color: #ddc0a6
       .box-galeria
