--- a/resources/assets/styles/components/_sobre.sass
+++ b/resources/assets/styles/components/_sobre.sass
@@ -72,3 +72,6 @@
     width: 100% !important
     display: flex !important
     justify-content: center !important
+  .item-video-sobre
+    video
+      height: 350px !important
