--- a/resources/assets/styles/components/_sobre.sass
+++ b/resources/assets/styles/components/_sobre.sass
@@ -68,6 +68,7 @@
     flex-direction: column !important
   .box-left-sobre
     width: 100% !important
+    margin-top: -4rem !important
   .box-right-sobre
     width: 100% !important
     display: flex !important
