ajustes css mobile

--- a/resources/assets/styles/components/_sobre.sass
+++ b/resources/assets/styles/components/_sobre.sass
@@ -68,7 +68,7 @@
     flex-direction: column !important
   .box-left-sobre
     width: 100% !important
-    margin-top: -4rem !important
+    margin-top: -18rem !important
   .box-right-sobre
     width: 100% !important
     display: flex !important
@@ -76,3 +76,5 @@
   .item-video-sobre
     video
       height: 350px !important
+  #player
+    margin-top: -5rem !important
