--- a/resources/assets/styles/main.css
+++ b/resources/assets/styles/main.css
@@ -520,7 +520,7 @@ h2 {
   }
   .box-left-sobre {
     width: 100% !important;
-    margin-top: -4rem !important;
+    margin-top: -19rem !important;
   }
   .box-right-sobre {
     width: 100% !important;
@@ -529,6 +529,9 @@ h2 {
   }
   .item-video-sobre video {
     height: 350px !important;
+  }
+  #player {
+    margin-top: -5rem !important;
   }
 }
 * {
