--- a/resources/assets/styles/main.css
+++ b/resources/assets/styles/main.css
@@ -530,6 +530,9 @@ h2 {
   .item-video-sobre video {
     height: 350px !important;
   }
+  .item-video-sobre iframe {
+    margin-top: -5rem !important;
+  }
 }
 * {
   margin: 0;
